fix: fixing some backend issues