@@ -18,6 +18,7 @@ import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import static org.springframework.http.HttpHeaders.*;
 
@@ -57,7 +58,7 @@ public class BeansConfig {
         final CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
         config.setAllowedOrigins(
-                Collections.singletonList("http://localhost:4200")
+                List.of("http://localhost:4200", "http://localhost:8080")
         );
         config.setAllowedHeaders(
                 Arrays.asList(
